Add contents to new pages site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <h1>Highlights</h1>
 <ul>
-  <li>Downloading</li>
-  <li>Oaris</li>
-  <li>Coding Class</li>
+  <li href="">Downloading</li>
+  <li href="">Oaris</li>
+  <li href=""> Class</li>
 </ul>
+
+
+=======================[Downloads]===================================
+<p>Laucher Download for: [WINDOWS] coming soon</p>
+<p> Laucher Download for: [Linux] Coming soon</p>
+<p> Laucher Download for: [MAC] Coming soon</p>
+
+
+===================[Oaris]============================================
+<p>Oaris is a new Battle royale</p>
+<p> Download: in [DEVELOPMENT] </p>
+<p>if you wish to help the Development team by taking a class [COMING SOON]</p>
+====================[Class]==========================================
+please ask a adminstrator (Via Discord) to see if you can take a class to become a staff with AZMGaming 
+=====================================================================================================
