add contents to new pages site

--- a/index.html
+++ b/index.html
@@ -19,3 +19,10 @@
 ====================[Class]==========================================
 please ask a adminstrator (Via Discord) to see if you can take a class to become a staff with AZMGaming 
 =====================================================================================================
+
+
+  <p>
+    <img src = "oa.png"
+         alt = "Alert!" />
+  </p>
+ 
