add contents to new pages site

--- a/index.html
+++ b/index.html
@@ -26,3 +26,8 @@ please ask a adminstrator (Via Discord) to see if you can take a class to become
          alt = "Alert!" />
   </p>
  
+  <p>
+    <img src = "concept.png"
+         alt = "Concept art" />
+  </p>
+ 
